--- a/Spread/WorkingDocuments/IntroductionToBayesianCircularOutcomeGLM/IntroductionToBayesianCircularRegression.tex
+++ b/Spread/WorkingDocuments/IntroductionToBayesianCircularOutcomeGLM/IntroductionToBayesianCircularRegression.tex
@@ -102,7 +102,7 @@ The model supposes each observation $\theta_i$ to be distributed according to a 
 
 \begin{align*}
 \text{Pr}(\Theta_i = \theta_i) &=  \mathcal{VM}(\theta_i \vert \beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i), \kappa) \\
-&= \left\lbrace 2 \pi I_0(\kappa) \right\rbrace^{-1} \exp \left\lbrace \kappa \cos \left[ \theta_i - (\beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i)) \right]  \right\rbrace. $$
+&= \left\lbrace 2 \pi I_0(\kappa) \right\rbrace^{-1} \exp \left\lbrace \kappa \cos \left[ \theta_i - (\beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i)) \right]  \right\rbrace. 
 \end{align*}
 
 \section{Link function} \label{link}
