--- a/Spread/Article/ACircularOutcomeBayesianGLM.tex
+++ b/Spread/Article/ACircularOutcomeBayesianGLM.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 %\usepackage{fullpage}
 
+\usepackage[]{algorithm2e}
+
 \usepackage{apacite}
 \usepackage{natbib}
 \usepackage{hyperref}
@@ -32,24 +34,26 @@ Because of this, linear models may not fully describe the process that has gener
 
 The circular analogue to the normal distribution is the von Mises distribution \citep{von1918ganzzahligkeit}. This symmetric unimodal distribution is given by
 \begin{equation}
-VM(\theta \vert \mu, \kappa) = \left[ 2 \pi I_0(\kappa) \right]^{-1} 
+\mathcal{VM}(\theta \vert \mu, \kappa) = \left[ 2 \pi I_0(\kappa) \right]^{-1} 
 \exp \left( \kappa \cos \left[ \theta - \mu \right] \right),
 \end{equation}
 where $\theta$ represents an angular measurement, $\mu$ represents the mean direction, $\kappa$ is a concentration parameter, and $I_0$ represents the modified Bessel function of the first kind and order zero. Early approaches to Markov chain Monte Carlo (MCMC) sampling for this model provide a method for sampling $\mu$ when $\kappa$ is known \citep{mardia1976bayesian} and sampling both parameters for a single group of data \citep{damien1999fullbayes}. Recent theoretical work has much improved the efficiency of the sampling of the concentration parameter of the von Mises distribution \citep{forbes2014fast}. None of these approaches allows prediction of circular outcome data or comparison of groups. Frequentist methods for these situations have been developed in a circular ANOVA \citep{harrison1986analysis,harrison1988development} and circular regression \citep{fisher1992regression}, but they are limited in scope and applicability. 
 
 A Bayesian circular data regression analysis is performed and applied by \citet{gill2010}, using starting values from a frequentist iterative reweighted least squares (IRLS) algorithm, similar to that used by \citet{fisher1992regression}. In that paper, the authors show that the likelihood of the regression coefficients $\beta$ from their model is not globally concave, and advise careful inspection of the likelihood surface of the regression coefficients. Downsides to the approach taken by \citet{gill2010} are that a prior is not specified, the algorithm is very slow, and it may be uncertain whether the regression coefficients will move to a local maximum instead of the global maximum. 
 
-Recent work has provided a multivariate extension of the von Mises distribution \citep{mardia2008multivariate,mardia2014some}. \citet{lagona2014regression} extends this to the General Linear Model (GLM) setting, applying MCMC likelihood approximation as in \citet{geyer1992constrained} to obtain Maximum Likelihood Estimates (MLEs). This is approach is not fully Bayesian, but it is a promising approach because of its flexibility, allowing both the mean and concentration to be dependent on an arbitrary set of covariates, as well as allowing observations to be dependent.
+Recent work has provided a multivariate extension of the von Mises distribution \citep{mardia2008multivariate,mardia2014some}. \citet{lagona2014regression} extends this to the General Linear Model (GLM) setting, applying MCMC likelihood approximation as in \citet{geyer1992constrained} to obtain Maximum Likelihood Estimates (MLEs). This approach is not fully Bayesian, but it is a promising approach because of its flexibility, allowing both the mean and concentration to be dependent on an arbitrary set of covariates, as well as allowing observations to be dependent.
+
+In this paper, a novel fully Bayesian method for the analysis of circular data will be developed. It's application will be made accessible, and potential issues will be studied. Finally, simulations into its performance will be discussed.
 
 The GLM approach to analysis of circular data is not free from the lack of concavity as described in \citet{gill2010}, although this has not been investigated in literature. In this paper, the GLM approach will applied in a fully Bayesian setting. Furthermore, the lack of concavity in the likelihoods will be examined, and suggestions will be formulated on how to deal with this issue. 
 
-\section{Model}
+\section{The Model}
 
-Let $\boldsymbol\theta = \theta_1, \dots, \theta_n$ be a set of circular data, where each $\theta_i \in [-\pi, \pi)$, and let $\boldsymbol{X}$ be an $(n \times K)$ matrix of $K$ linear predictors. Assume that each angle is drawn from an independent VM distribution $ VM(\theta_i \vert \hat{\theta_i}, \kappa)$. The predicted value $\hat{\theta_i}$ is given by
+Let $\boldsymbol\theta = \theta_1, \dots, \theta_n$ be a set of circular data, where each $\theta_i \in [-\pi, \pi)$, and let $\boldsymbol{X} = \boldsymbol{x}_1, \dots, \boldsymbol{x}_n$ be an $(n \times K)$ matrix of linear predictors. Assume that each observed angle $\theta$ is generated from an independent VM distribution $ VM(\theta_i \vert \hat{\theta_i}, \kappa)$. The predicted value $\hat{\theta_i}$ is given by
 \begin{equation}
 \hat{\theta_i} = \beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i), 
 \end{equation}
-where $g(\cdot)$ is a link function, as described in \citet{fisher1992regression}. 
+where $\beta_0$ is an offset parameter, $g(\cdot)$ is a link function, as described in \citet{fisher1992regression}, and $\boldsymbol{\beta} = \beta_1, \dots, \beta_K$ is a vector of coefficients. 
 
 \subsection{Link function}
 
@@ -58,7 +62,7 @@ The link function maps $\boldsymbol\beta^T \boldsymbol{x}_i \in \mathbb{R}$ to t
 A popular choice is 
 \begin{equation}
 g(x) = 2 \tan^{-1}(x),
-\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, that is, it may predict values across the entire circle. This link function is shown in figure \ref{linkfunc}.
+\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}.
 
 \begin{figure}
 {\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
@@ -70,7 +74,7 @@ g(x) = 2 \tan^{-1}(x),
 
 The joint likelihood is given by
 \begin{align}
-L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}) &\propto  \prod_{i=1}^{n} \mathcal{VM}(\theta_i \vert \beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i), \kappa) \\
+L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}, \boldsymbol{X}) &\propto  \prod_{i=1}^{n} \mathcal{VM}(\theta_i \vert \beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i), \kappa) \\
 &=  \left\lbrace 2 \pi I_0(\kappa) \right\rbrace^{-n} \exp \left\lbrace \kappa \sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  \right\rbrace. 
 \end{align}
 
@@ -78,15 +82,73 @@ L(\beta_0, \boldsymbol{\beta}, \kappa \vert \boldsymbol{\theta}) &\propto  \prod
 
 \subsection{Prior}
 
-For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{VM}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. It is given up to a constant of proportionality by 
-$$ p(\mu_{\psi}, \kappa_{\psi}) \propto  I_0 (\kappa_{\psi}) ^{-c} \exp\{R_0 \kappa_{\psi} \cos (\mu_{\psi} - \mu_0)\},$$
-which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. It may seem unlikely to expect prior expectations to exist about $\mu_{\psi}$ and $\kappa_{\psi}$, but this method does allow easy specification of a non-informative prior as well by setting $R_0 = 0$ and $c = 0$. 
+For $\beta_0$ and $\kappa$, a conjugate prior will be used. Setting $\psi_i = \theta_i - g(\boldsymbol\beta^T \boldsymbol{x}_i)$ leaves us with simply the regular von Mises likelihood $L_{\mathcal{VM}}(\beta_0, \kappa \vert \boldsymbol\psi)$, where $\beta_0$ is the mean direction. \citet{guttorp1988finding} present a conjugate prior for the von Mises distribution. Applied to this situation, it is given up to a constant of proportionality by 
+\begin{equation}
+p(\mu_{\psi}, \kappa) \propto  I_0 (\kappa) ^{-c} \exp\{R_0 \kappa \cos (\mu_{\psi} - \mu_0)\},
+\end{equation}
+where $\mu_{\psi}$ represents the mean direction of the set of angles $\boldsymbol\psi$,  which represents $c$ observations of $\psi$ with prior mean direction $\mu_0$ and prior resultant length $R_0$. Note, however, that in this case this represents our prior information regarding the distribution of $\psi$ rather than $\theta$. It is unlikely that prior expectations to exist about $\mu_{\psi}$ and $\kappa$, but this method does allow easy specification of a non-informative prior by setting $R_0 = 0$ and $c = 0$. 
 
-For each $\beta$, a normal prior will be specified. 
+For each $\beta$, a normal prior will be specified as 
+\begin{equation}
+\beta \sim N(0, 10).
+\end{equation}
 
-\subsection{Posterior}
+
+\subsection{Shape of the conditional likelihood of $\beta$}
 
 
+
+
+\section{MCMC Sampling}
+
+\begin{algorithm}[H]
+% \KwData{this text}
+% \KwResult{how to write algorithm with \LaTeX2e }
+ For each $\beta_j$, select an appropriate bandwith $b_j.$
+ 
+ Set $\boldsymbol{\beta}$ and $\kappa$ to their starting values.
+ 
+ $m = n + c.$
+ 
+ \For{$i \leftarrow 1$ \KwTo $Q$}{
+ 
+%  \tcc{Sample $\beta_0$}
+  
+  $\psi_i = \theta_1 - g (\boldsymbol{\beta}^T \boldsymbol{x}_i),$ for each $i = 1, \dots, n.$
+  
+  Compute $\bar\psi$ and $R_{\psi}.$
+  
+  Draw $\beta_0^{(i)} \sim \mathcal{VM}(\bar\psi, R_{\psi} \kappa).$
+  
+  \For{$j \leftarrow 1$ \KwTo $K$}{
+  
+	  Draw $\tau_j \sim U(-b_j, b_j).$
+	  
+	  $\beta_j^{(can)} = \beta_j^{(i-1)} + \tau_j.$ 
+	  
+	  Compute
+	  \begin{align*}
+	  A_{\beta_j} = ~& \ln L \left( \beta_{k}^{(can)} \vert \beta_0^{(i)}, \boldsymbol\beta_{-(j)}^{(i-1)}, \kappa^{(i-1)}, \boldsymbol\theta, \boldsymbol{X} \right) + \ln \text{Prior}_{\beta_j}\left(\beta_{j}^{(can)}\right) \\
+	  - & \ln L \left( \beta_{j}^{(i-1)} \vert \beta_0^{(i)}, \boldsymbol\beta_{-(j)}^{(i-1)}, \kappa^{(i-1)}, \boldsymbol\theta, \boldsymbol{X} \right) - \ln \text{Prior}_{\beta_j}\left(\beta_{j}^{(i-1)}\right).
+	  \end{align*}
+	  
+	  Draw $u_j \sim U(0,1).$
+	  
+  	  \eIf{$ A_{\beta_j} > \ln u_j$} {
+  	    $\beta_j^{(i)} = \beta_j^{(can)}.$
+  	  }{
+  	    $\beta_j^{(i)} = \beta_j^{(i-1)}.$
+  	  }
+  
+}  
+
+  $\eta = - R_\psi * \cos\left(\beta_0 - \bar{\psi}\right).$
+  
+  $\kappa^{(i)} = \texttt{sampleKappa}(\eta, m).$ 
+
+  }
+ \caption{An algorithm for the given GLM approach}
+\end{algorithm}
 
 
 
@@ -147,9 +209,7 @@ For each $\beta$, a normal prior will be specified.
 \section*{Appendix A: Conditional distribution of $\beta_0$} \label{beta0}
 
 Here, I will show that the conditional distribution for $\beta_0$,
-
 $$ L(\beta_0 \vert \boldsymbol\beta, \kappa, \theta, \boldsymbol{X}) \propto \exp \left\lbrace \kappa \sum_{i=1}^n \cos \left[ \theta_i - (\beta_0 + g(\boldsymbol\beta^T \boldsymbol{x}_i)) \right]  \right\rbrace \propto \mathcal{VM}(\beta_0 \vert \bar\psi, R_{\psi}\kappa). $$
-
 The proof for the conditional distribution of $\beta_0$ in the GLM closely follows the derivation for the distribution of the mean direction $\mu$ of the von Mises distribution, which shows that $L(\mu \vert \kappa, \boldsymbol\theta) \propto \mathcal{VM}(\mu \vert \bar\theta, R_{\theta} \kappa)$.
 
 The conditional likelihood of $\beta_0$ is given by
