--- a/Spread/Article/ACircularOutcomeBayesianGLMKnitr.tex
+++ b/Spread/Article/ACircularOutcomeBayesianGLMKnitr.tex
@@ -117,10 +117,10 @@ The link function maps $\boldsymbol\beta^T \boldsymbol{x}_i \in \mathbb{R}$ to t
 A popular choice is
 \begin{equation}
 g(x) = 2 \tan^{-1}(x),
-\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}.
+\end{equation} because for this link function $g(0) = 0,$ and because its range is $\mathbb{S}^1$, which allows the predicted values across the entire circle. This link function is shown in figure \ref{linkfunc}. To ensure that the link function has the same form, all predictors must be standardized. % Mind you, it is probably better to add parameters to the model that account for mean and variance of the predictors. This might take into account the uncertainty about the mean and variance of the predictor?! Discuss.
 
 \begin{figure}
-{\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
+% {\centering \includegraphics[width=\linewidth]{figure/Link.pdf} }
 \caption{Link function $g(x) = 2 \tan^{-1}(x).$}
 \label{linkfunc}
 \end{figure}
@@ -154,25 +154,22 @@ This choice of prior will be examined in the following section.
 
 
 
-Due to the periodical nature of the outcome variable $\theta$, the conditional likelihood of any $\beta_j$ may have not be globally concave and may have more than one maximum. In this section, this issue will be explored.
-
 The conditional likelihood of $\boldsymbol{\beta}$ is independent of $\kappa$ and given by
 
 \begin{align}
 L(\boldsymbol{\beta} \vert \beta_0, \boldsymbol{\theta}, \boldsymbol{X}) &\propto
 \exp \left\lbrace \sum_{i=1}^{n} \cos \left[ \theta_i - \beta_0 - g(\boldsymbol\beta^T \boldsymbol{x}_i) \right]  \right\rbrace.
 \end{align}
+For simplicity,
 
-First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \left\lbrace -3, -2, \dots, 2, 3 \right\rbrace $ and $\theta_i = \frac{\pi}{2} + 2 \tan^{-1} (x_i), $ for each $ i \in 1, 2, \dots, 7.$ The relationship between the predictor and circular outcome is shown in figure \ref{SimpleDataset}.
+Due to the periodical nature of the outcome variable $\theta$, the conditional likelihood of some $\beta_j$ may have not be globally concave and may have more than one maximum. In this section, this issue will be explored.
 
+First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \left\lbrace -3, -2, \dots, 2, 3 \right\rbrace $ that was standardized, and $\theta_i = \frac{\pi}{2} + 2 \tan^{-1} (x_i) + \varepsilon,$ for each $ i \in 1, 2, \dots, 7,$ where $\varepsilon \sim \mathcal{N}(0, .1)$, so that true $\beta = 1$. The relationship between the predictor and circular outcome is shown in figure \ref{SimpleDataset}.
+
+\begin{figure}
+\label{SimpleDataset}
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## [1] "Mean direction: 5.44 radians"
-## [1] "Mean direction: 5.44 radians"
-## [1] "Mean direction: 5.44 radians"
-\end{verbatim}
-\end{kframe}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
 {\centering \includegraphics[width=\maxwidth]{figure/SimpleDataset-1} 
 
@@ -181,8 +178,52 @@ First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \lef
 
 
 \end{knitrout}
+\caption{Relationship between the predictor $X$ and circular outcome $\theta$ in a simple case.}
+\end{figure}
+
+The shape of the conditional likelihood is irregular, and depends the data and the current value for $\beta_0$. Figure \ref{SimpleDataBeta} shows three possible shapes for different $\beta_0$.
+
+\begin{figure}
+\label{SimpleDataBeta}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/SimpleDataBeta-1} 
+
+}
 
 
+
+\end{knitrout}
+\caption{RHS of conditional likelihood.}
+\end{figure}
+
+
+
+
+
+\begin{figure}
+\label{ZeroBData}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/ZeroBData-1} 
+\includegraphics[width=\maxwidth]{figure/ZeroBData-2} 
+
+}
+
+
+
+\end{knitrout}
+\caption{RHS of conditional likelihood.}
+\end{figure}
+
+
+
+
+
+
+The standard deviation of the normal prior
 
 
 \section{MCMC Sampling}
@@ -190,8 +231,7 @@ First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \lef
 
 
 \begin{algorithm}[H]
-% \KwData{this text}
-% \KwResult{how to write algorithm with \LaTeX2e }
+
  For each $\beta_j$, select an appropriate bandwith $b_j.$
 
  Set $\boldsymbol{\beta}^{(1)}$ and $\kappa^{(1)}$ to their starting values.
@@ -199,8 +239,6 @@ First, consider a simple dataset, with a single predictor $\boldsymbol{X} = \lef
  $m = n + c.$
 
  \For{$i \leftarrow 2$ \KwTo $Q$}{
-
-%  \tcc{Sample $\beta_0$}
 
   $\psi_i = \theta_1 - g (\boldsymbol{\beta}^T \boldsymbol{x}_i),$ for each $i = 1, \dots, n.$
 
